tests/auto/qml/qqmlcomponent/data/requiredPropertiesInAttachedIndirect.qml
import qt.test 1.0
RequiredPropertiesInAttached {
    AttachedRequiredProperty.index: -1
} // error: we don't support required attached properties
